--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "gatsby-plugin-netlify": "^2.1.3",
     "prettier": "^1.17.1"
   },
   "keywords": [
